public/less/includes/form.less
@input_font_color: #000;
@input_font_size: 1rem;
@input_background_color: #fff;
@input_placeholder_color: #c0c0c0;

/** Form **/
#messages { position: relative; margin: 1rem @margin_width 0; }
#messages.empty { display: none; }
.msg { margin-top: 0.5rem; line-height: 1.2; color: @brand_color_contrast_dark; }
.msg-error { color: @brand_color_dark; }

form { }
fieldset, .fs { position: relative; padding: 1.5rem 0 0; .clearfix(); }
.fs-title { margin-bottom: 0.875rem; }
fieldset label, .fs-label { display: none; }
::-webkit-input-placeholder { /* WebKit browsers */ color: @input_placeholder_color; }
::-moz-placeholder { /* Mozilla Firefox 19+ */ color: @input_placeholder_color; }
fieldset input, fieldset textarea, .fs-input, .fs-textarea, .fs-select {
  display: block; margin: 0 0 1rem; .border_radius_a(0px); padding: 1.28125rem 1.5rem; width: 100%;
  font-size: @input_font_size; font-family: @font_stack; line-height: 1.3; color: @input_font_color;
  background-color: @input_background_color; .border_box(); outline: none;

  &:focus { outline: 3px solid @highlight; }

  &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ color: @input_placeholder_color; }
  &:-ms-input-placeholder { /* Internet Explorer 10+ */ color: @input_placeholder_color; }
}
fieldset input, .fs-input { }

fieldset textarea, .fs-textarea {
  height: 5.625rem; min-height: 11em; line-height: 1.1;
}

.fs-full { clear: both; }
.fs-half { /* See media/min-540.less for styles */ }
.fs-error { border-left: 3px solid @brand_color_dark !important; }

/*** Form - Styled Checkbox ***/
.scheckbox {
  display: inline-block; position: relative; width: 1.75rem; height: 1.75rem;
  background: @brand_color; color: @accent_color; overflow: hidden;
}
.scheckbox input { position: relative; opacity: 0.01; }
.scheckbox-focused { outline: 3px solid @highlight; }
.scheckbox-checked:after {
  content: '✔'; display: block; position: absolute; top: 0; left: 0;
  width: 1.75rem; line-height: 1.75rem; color: @accent_color; text-align: center;
}

/*** Form - Styled Select ***/
.sselect {
  display: block; position: relative; margin: 0 0 1rem; padding: 1.28125rem 1.5rem; width: 100%;
  font-size: @input_font_size; font-family: @font_stack; line-height: 1.3; color: @input_font_color;
  background: @input_background_color; .border_box(); outline: none;
}
.sselect-focus { outline: 3px solid @highlight; }
.sselect-default { color: @input_placeholder_color; }
.sselect select { position: absolute; top: 0; left: 0; opacity: 0.01; }
.icon-dropdown, .fs-select {
  .bg('icon/dropdown.png', right 25px, center); background-color: #fff; background-size: 40px 25px;
}

/*** Form - Line Break ***/
.fs-break { clear: both; visibility: hidden; }

/** Form - Labeled Variant **/
.f-labeled label { display: block; margin: 0 0 0.5rem; }

